--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
           1024
         );
 
+        // set the the canvas to the resulting image size (a square)
+        canvas.width = dimension;
+        canvas.height = dimension;
+        
+        // if the image is in landscape mode (aspectRatio > 1) it will overflow horizontally, 
+        // if it's in portrait mode it will overflow vertically.
         const aspectRatio = profilePic.width / profilePic.height;
         const [profilePicW, profilePicH] =
           aspectRatio > 1
             ? [dimension * aspectRatio, dimension] // scale width outside dimension
             : [dimension, dimension / aspectRatio]; // scale height outside dimension
 
-        canvas.width = dimension;
-        canvas.height = dimension;
-
+        // draw the image to the canvas starting in the top left corner (todo: center the image in the canvas)
         context.drawImage(profilePic, 0, 0, profilePicW, profilePicH);
 
         context.drawImage(frame, 0, 0, dimension, dimension);
