--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
       body {
         font-size: 20px;
       }
-      #canvas {
-        position: absolute;
-        left: -1000px;
-        top: -1000px;
-      }
       img {
         max-width: 100%;
         max-height: 100%;
@@ -22,26 +17,23 @@
 
   <body>
     <div id="main">
-      <p>Select your prefered profile pic</p>
+      <p>Select your prefered profile pic!</p>
       <input type="file" id="inp" />
-      <canvas id="canvas" width="500" height="500"></canvas>
     </div>
 
     <script>
-      const canvas = document.getElementById("canvas");
-      const context = canvas.getContext("2d");
-
       const loadImage = (src) =>
         new Promise((resolve, reject) => {
           const image = new Image();
           image.src = src;
-          image.setAttribute("crossorigin", "anonymous"); // works for me
           image.onload = () => resolve(image);
           image.onerror = reject;
         });
 
       async function render(profilePicSrc) {
-        const frame = await loadImage("/frame.png");
+        const canvas = document.createElement("canvas");
+        const context = canvas.getContext("2d");
+
         const profilePic = await loadImage(profilePicSrc);
 
         // the dimension of the resulting image should
@@ -68,6 +60,8 @@
         const y = (dimension - profilePicH) / 2;
         context.drawImage(profilePic, x, y, profilePicW, profilePicH);
 
+        // draw frame
+        const frame = await loadImage("/frame.png");
         context.drawImage(frame, 0, 0, dimension, dimension);
 
         const imgUrl = canvas.toDataURL("image/png");
