--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     <style>
       body {
         font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
       img {
         max-width: 100%;
         max-height: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
     </style>
   </head>
 
   <body>
     <div id="main">
-      <p>Select your prefered profile pic!</p>
+      <p>Select your prefered profile pic</p>
       <input type="file" id="inp" />
     </div>
 
     <script>
+      // add more frames here as they become availible
+      const frames = ["/frame.png"];
+
       const loadImage = (src) =>
         new Promise((resolve, reject) => {
           const image = new Image();
@@ -30,11 +37,9 @@
           image.onerror = reject;
         });
 
-      async function render(profilePicSrc) {
+      function render(profilePic, framePic) {
         const canvas = document.createElement("canvas");
         const context = canvas.getContext("2d");
-
-        const profilePic = await loadImage(profilePicSrc);
 
         // the dimension of the resulting image should
         // be somewhere between 512px and 1024px
@@ -61,23 +66,30 @@
         context.drawImage(profilePic, x, y, profilePicW, profilePicH);
 
         // draw frame
-        const frame = await loadImage("/frame.png");
-        context.drawImage(frame, 0, 0, dimension, dimension);
+        context.drawImage(framePic, 0, 0, dimension, dimension);
 
-        const imgUrl = canvas.toDataURL("image/png");
-        return imgUrl;
+        const imgEl = document.createElement("img");
+        imgEl.src = canvas.toDataURL("image/png");
+        return imgEl;
       }
+
+      const framePromises = frames.map(loadImage);
 
       document.getElementById("inp").onchange = async ({ target }) => {
         try {
           const profilePicUrl = URL.createObjectURL(target.files[0]);
-          const imgUrl = await render(profilePicUrl);
+
+          const profilePic = await loadImage(profilePicUrl);
+          const framePics = await Promise.all(framePromises);
 
           const mainEl = document.getElementById("main");
-          const imgEl = document.createElement("img");
-          imgEl.src = imgUrl;
           mainEl.innerHTML = "";
-          mainEl.appendChild(imgEl);
+
+          // render each frame over the profile pic
+          framePics.forEach((framePic) => {
+            const imgEl = render(profilePic, framePic);
+            mainEl.appendChild(imgEl);
+          });
         } catch (err) {
           console.log(err);
         }
