Add instructions for download

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    <h1>Create an avatar to show your union support!</h1>
+    <p>To save an image, right click it and select "Save Image".</p>
     <div id="main">
       <div class="input">
         <div id="uploaded-frame"></div>
@@ -18,6 +20,7 @@
         Loading...
       </div>
     </div>
+    <p style="font-size: 12px;">Note: Images are not transferred or stored remotely; processing is completed on your computer.</p>
 
     <script>
       const loadImage = (src) =>
